<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fadingEdge="vertical"
    tools:context=".ui.client.create.ClientCreateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/action_bar"
            android:id="@+id/action_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintHeight_default="wrap" />

        <!-- CardView Client Create -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_client_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <!-- Nombre -->
                <TextView
                    android:id="@+id/tv_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name_client_create"
                    android:textColor="@color/md_theme_inverseSurface"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:hint="@string/hint_client_create"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:inputType="textPersonName"
                    android:background="@drawable/bg_form"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_first_name"
                    app:layout_constraintWidth_default="wrap"/>

                <!-- Apellido -->
                <TextView
                    android:id="@+id/tv_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/last_name_client_create"
                    android:textColor="@color/md_theme_inverseSurface"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_first_name"/>

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:hint="@string/hint_client_create"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:inputType="textPersonName"
                    android:background="@drawable/bg_form"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_last_name"
                    app:layout_constraintWidth_default="wrap"/>

                <!-- Edad -->
                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/age_client_create"
                    android:textColor="@color/md_theme_inverseSurface"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_last_name"/>

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:hint="@string/hint_client_create"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:inputType="number"
                    android:background="@drawable/bg_form"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_age"
                    app:layout_constraintWidth_default="wrap"/>

                <!-- Fecha de nacimiento -->
                <TextView
                    android:id="@+id/tv_birth_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/birth_date_client_create"
                    android:textColor="@color/md_theme_inverseSurface"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_age"/>

                <EditText
                    android:id="@+id/et_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:hint="@string/hint_date_client_create"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/bg_form"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_birth_date"
                    app:layout_constraintWidth_default="wrap"/>

                <!-- Botón Enviar -->
                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/send_client_create"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_birth_date"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>